// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RestaurantList should render loading correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RestaurantList
    fetchRestaurants={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    isLoading={true}
    restaurants={Array []}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <Spin
        size="default"
        spinning={true}
        tip="Loading..."
        wrapperClassName=""
      />,
      "className": "restaurant-list",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "size": "default",
        "spinning": true,
        "tip": "Loading...",
        "wrapperClassName": "",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Spin
          size="default"
          spinning={true}
          tip="Loading..."
          wrapperClassName=""
        />,
        "className": "restaurant-list",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "size": "default",
          "spinning": true,
          "tip": "Loading...",
          "wrapperClassName": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`RestaurantList should render restaurants correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RestaurantList
    fetchRestaurants={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    isLoading={false}
    restaurants={
      Array [
        Object {
          "accepts10Bis": true,
          "address": "144 Derech Menachem Begin, Tel Aviv, Israel",
          "cuisine": "French",
          "id": 1,
          "maxDeliveryTime": 60,
          "name": "Chez Tamir",
          "rating": 2,
        },
        Object {
          "accepts10Bis": true,
          "address": "7 Derech Namir, Tel Aviv, Israel",
          "cuisine": "Italian",
          "id": 2,
          "maxDeliveryTime": 100,
          "name": "Tamir Trattoria",
          "rating": 1,
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <RestaurantCard
          restaurant={
            Object {
              "accepts10Bis": true,
              "address": "144 Derech Menachem Begin, Tel Aviv, Israel",
              "cuisine": "French",
              "id": 1,
              "maxDeliveryTime": 60,
              "name": "Chez Tamir",
              "rating": 2,
            }
          }
        />,
        <RestaurantCard
          restaurant={
            Object {
              "accepts10Bis": true,
              "address": "7 Derech Namir, Tel Aviv, Israel",
              "cuisine": "Italian",
              "id": 2,
              "maxDeliveryTime": 100,
              "name": "Tamir Trattoria",
              "rating": 1,
            }
          }
        />,
      ],
      "className": "restaurant-list",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "1",
        "nodeType": "function",
        "props": Object {
          "restaurant": Object {
            "accepts10Bis": true,
            "address": "144 Derech Menachem Begin, Tel Aviv, Israel",
            "cuisine": "French",
            "id": 1,
            "maxDeliveryTime": 60,
            "name": "Chez Tamir",
            "rating": 2,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "2",
        "nodeType": "function",
        "props": Object {
          "restaurant": Object {
            "accepts10Bis": true,
            "address": "7 Derech Namir, Tel Aviv, Israel",
            "cuisine": "Italian",
            "id": 2,
            "maxDeliveryTime": 100,
            "name": "Tamir Trattoria",
            "rating": 1,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <RestaurantCard
            restaurant={
              Object {
                "accepts10Bis": true,
                "address": "144 Derech Menachem Begin, Tel Aviv, Israel",
                "cuisine": "French",
                "id": 1,
                "maxDeliveryTime": 60,
                "name": "Chez Tamir",
                "rating": 2,
              }
            }
          />,
          <RestaurantCard
            restaurant={
              Object {
                "accepts10Bis": true,
                "address": "7 Derech Namir, Tel Aviv, Israel",
                "cuisine": "Italian",
                "id": 2,
                "maxDeliveryTime": 100,
                "name": "Tamir Trattoria",
                "rating": 1,
              }
            }
          />,
        ],
        "className": "restaurant-list",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "1",
          "nodeType": "function",
          "props": Object {
            "restaurant": Object {
              "accepts10Bis": true,
              "address": "144 Derech Menachem Begin, Tel Aviv, Israel",
              "cuisine": "French",
              "id": 1,
              "maxDeliveryTime": 60,
              "name": "Chez Tamir",
              "rating": 2,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "2",
          "nodeType": "function",
          "props": Object {
            "restaurant": Object {
              "accepts10Bis": true,
              "address": "7 Derech Namir, Tel Aviv, Israel",
              "cuisine": "Italian",
              "id": 2,
              "maxDeliveryTime": 100,
              "name": "Tamir Trattoria",
              "rating": 1,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;
